--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-image-slider-show": "^1.0.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.1",
